updated USA workflow