@@ -5,7 +5,8 @@
 - run like this: 
 
 ```
-export _JAVA_OPTIONS="-XX:ParallelGCThreads=2"
+export _JAVA_OPTIONS="-XX:ParallelGCThreads=32"
+export _JAVA_OPTIONS="-XX:+UseZGC"
 cd /data/Jakku/mat_stocks/stock/USA
 nextflow -Dnxf.pool.type=sync run -resume /home/frantzda/mat_stocks/stock-mapping/type2/stock-mapping_usa.nf -w /data/Alderaan/stock -with-dag /data/Jakku/mat_stocks/stock/USA/flowchart.html -with-report /data/Jakku/mat_stocks/stock/USA/report.html
 ```
